# nvd_cve

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  nvd_cve.1
.github/workflows/: build_and_test.yml  release.yml
examples/: sync_and_search.rs
src/: cache.rs  cli.rs  client.rs  cve.rs  feed.rs  lib.rs  main.rs
tests/: cache.rs  cve.rs  metafile.rs  sync_2_0.rs  util.rs
tests/files/: nvdcve-1.1-recent.json  nvdcve-1.1-recent.meta.broken_line  nvdcve-1.1-recent.meta.broken_parse  nvdcve-1.1-recent.meta.broken_split  nvdcve-2.0-xz.json
