[package]
name = "nvd_cve"
version = "0.2.0"
edition = "2021"
authors = [
    "Travis Paul <Tr@visPaul.me>",
    "Orhun Parmaksız <orhunparmaksiz@gmail.com>"
]
license = "BSD-2-Clause"
keywords = ["CVE", "NIST", "vulnerability"]
categories = ["command-line-utilities", "caching"]
readme = "README.md"
repository = "https://github.com/travispaul/nvd_cve"
description = "Search for CVEs against a local cached copy of NIST National Vulnerability Database (NVD)."

[dependencies]
home = "0.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
url = "2.5"
progress = "0.2"
clap = "2.34"
chrono = "0.4"
humansize = "1.1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.31" }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
